[package]
name = "unless"
version = "0.1.0"
authors = ["C0n5t4ntK <C0n5t4ntK@outlook.com>"]

[[bin]]
name = "main"
path = "src/main.rs"

#[[bin]]
#name = "test"
#path = "src/test.rs"



[dependencies]
log = "0.4.6"
dotenv = "0.14.1"
error-chain = "0.12.1"
lazy_static = "1.1.0"
r2d2 = "0.8.5"
r2d2-diesel = "1.0.0"
rocket = "0.4.2"
rocket_codegen = "0.4.2"
serde = "1.0.70"
serde_derive = "1.0.70"
serde_json = "1.0.24"
tera = "0.11.20"
rust-crypto = "0.2.36"
bcrypt = "0.6"
rand = "0.7.2"
ipnetwork = "0.13.1"
fern = { version = "0.5.8", features = ["colored"] }

[dependencies.chrono]
features = ["serde", "rustc-serialize"]
version = "0.4.9"

[dependencies.diesel]
features = ["postgres", "chrono","network-address"]
version = "1.4.2"

[dependencies.rocket_contrib]
default-features = false
features = ["handlebars_templates", "tera_templates", "json"]
version = "0.4.2"
